--- a/index-2.html
+++ b/index-2.html
@@ -7,8 +7,9 @@
 
   <!-- Bootstrap CSS -->
   <link rel="stylesheet" href="assets/css/bootstrap.css">
-  <link href="assets/css/style.css" rel="stylesheet">
   <link rel="stylesheet" href="assets/css/font-awesome.min.css">
+  <link rel='stylesheet' href="assets/css/style.css">
+  <link rel="stylesheet" href="assets/css/index-2.css">
 </head>
 <body class="home front-page">
   <nav class="navbar navbar-expand-md navbar-light bg-faded">
