--- a/index.html
+++ b/index.html
@@ -55,7 +55,7 @@
     <!-- 上面是复用的头部 -->
 
 
-<div id="myCarousel" class="carousel slide mb-3" data-ride="carousel">
+<div id="myCarousel" class="carousel slide" data-ride="carousel">
   <ol class="carousel-indicators">
     <li data-target="#myCarousel" data-slide-to="0" class="active"></li>
     <li data-target="#myCarousel" data-slide-to="1"></li>
@@ -88,45 +88,76 @@
   </a>
 </div>
 
-<div class="feature-list mb-1 mb-4">
+<div class="product-list">
   <div class="container">
+    <h2 class="product-title text-center mt-5 mb-4 display-4">领先的产品</h2>
     <div class="row">
-      <div class="media">
-        <div class="d-flex mr-3" style="font-size:72px;">
-          <i class="fa fa-desktop"></i>
+      <div class="card text-center">
+        <div class="feature-img text-primary mt-3">
+            <i class="fa fa-desktop"></i>
         </div>
-        <div class="media-body">
-          <h3>标题</h3>
-          呵呵
-        </div>
-      </div>
-      <div class="media">
-        <div class="d-flex mr-3" style="font-size:72px;">
-          <i class="fa fa-desktop"></i>
-        </div>
-        <div class="media-body">
-          <h3>标题</h3>
-          呵呵
+        <div class="card-block">
+          <h3 class="card-title">原型设计</h3>
+          <p class="card-text text-muted">信息架构、低保真原型、界面布局、快速原型、产品原型</p>
+          <p class="card-text"><a href="#" class="btn btn-secondary">查看详情</a></p>
         </div>
       </div>
-      <div class="media">
-        <div class="d-flex mr-3" style="font-size:72px;">
-          <i class="fa fa-desktop"></i>
+
+      <div class="card text-center">
+        <div class="feature-img text-primary mt-3">
+            <i class="fa fa-adjust" aria-hidden="true"></i>
         </div>
-        <div class="media-body">
-          <h3>标题</h3>
-          呵呵
-        </div>
-      </div>
-      <div class="media">
-        <div class="d-flex mr-3" style="font-size:72px;">
-          <i class="fa fa-desktop"></i>
-        </div>
-        <div class="media-body">
-          <h3>标题</h3>
-          呵呵
+        <div class="card-block">
+          <h3 class="card-title">网站设计与开发</h3>
+          <p class="card-text text-muted">品牌网站设计开发、展示营销网站、电子商务网站、手机网站/响应式网站、前端开发与测试</p>
+          <p class="card-text"><a href="#" class="btn btn-secondary">查看详情</a></p>
         </div>
       </div>
+
+      <div class="card text-center">
+        <div class="feature-img text-primary mt-3">
+          <i class="fa fa-html5" aria-hidden="true"></i>
+        </div>
+        <div class="card-block">
+          <h3 class="card-title">设计</h3>
+          <p class="card-text text-muted">移动界面设计、iOS/Android界面设计、微信公众平台、html5设计开发、移动网站设计开发</p>
+          <p class="card-text"><a href="#" class="btn btn-secondary">查看详情</a></p>
+        </div>
+      </div>
+
+      <div class="card text-center">
+        <div class="feature-img text-primary mt-3">
+            <i class="fa fa-desktop"></i>
+        </div>
+        <div class="card-block">
+          <h3 class="card-title">SEO/SEM账户托管</h3>
+          <p class="card-text text-muted">各种类型网站SEO可执行方案，SEM账户托管</p>
+          <p class="card-text"><a href="#" class="btn btn-secondary">查看详情</a></p>
+        </div>
+      </div>
+
+      <div class="card text-center">
+        <div class="feature-img text-primary mt-3">
+            <i class="fa fa-adjust" aria-hidden="true"></i>
+        </div>
+        <div class="card-block">
+          <h3 class="card-title">精细化运营咨询服务</h3>
+          <p class="card-text text-muted">围绕商业模式与AARRR模型给出最适合公司的运营策略</p>
+          <p class="card-text"><a href="#" class="btn btn-secondary">查看详情</a></p>
+        </div>
+      </div>
+
+      <div class="card text-center">
+        <div class="feature-img text-primary mt-3">
+          <i class="fa fa-html5" aria-hidden="true"></i>
+        </div>
+        <div class="card-block">
+          <h3 class="card-title">用户体验设计咨询</h3>
+          <p class="card-text text-muted">深度了解公司产品与优势，打造企业产品极致用户体验</p>
+          <p class="card-text"><a href="#" class="btn btn-secondary">查看详情</a></p>
+        </div>
+      </div>
+
     </div>
   </div>
 </div>
@@ -459,7 +490,7 @@
   </footer>
 
   <!-- jQuery first, then Tether, then Bootstrap JS. -->
-  <script src="assets/js/jquery.slim.min.js"></script><script src="assets/js/popper.min.js"></script>
+  <script src="assets/js/jquery.slim.min.js"></script>
   <script src="assets/js/popper.min.js"></script>
   <script src="assets/js/tether.min.js"></script>
   <script src="assets/js/bootstrap.min.js"></script>
