--- a/category.html
+++ b/category.html
@@ -88,7 +88,7 @@
       			<div class="entry-excerpt text-muted">
               <p>一个博客成功在很大基础上是因为它的定位清晰和优质内容。可我们通常见到一些新手站长或者想做自己博客的童鞋们.</p>
       			</div>
-            <p class="mb-0"><a href="single.html" class="btn btn-warning btn-sm">阅读全文 <i class="fa fa-chevron-right" aria-hidden="true"></i></a></p>
+            <p class="mb-0"><a href="single.html" class="btn btn-outline-warning btn-sm">阅读全文 <i class="fa fa-chevron-right" aria-hidden="true"></i></a></p>
           </div>
         </li>
         <li class="media entry">
