增加混合列表第一次

--- a/index.html
+++ b/index.html
@@ -33,6 +33,7 @@
           <li class="nav-item dropdown">
             <a class="nav-link dropdown-toggle" data-toggle="dropdown" aria-haspopup="true" aria-expanded="false">分类列表</a>
             <ul class="dropdown-menu" role="menu">
+              <li class="nav-item"><a class="nav-link" href="category6.html">混合列表</a></li>
               <li class="nav-item"><a class="nav-link" href="category.html">文章列表-中图</a></li>
               <li class="nav-item"><a class="nav-link" href="category4.html">文章列表-大图</a></li>
               <li class="nav-item"><a class="nav-link" href="category3.html">文章列表-Masonry布局</a></li>
