--- a/category6.html
+++ b/category6.html
@@ -60,91 +60,109 @@
   </div>
   <!-- /page-header end -->
 
+  <div class="container">
+    <div class="site-content">
+      <div class="row">
 
-<div class="container mt-3" id="site-content">
-  <div class="posts">
-    <div class="row">
+        <div class="col-8">
+          <div class="main-content">
+            <div class="card-list">
+              <div class="card">
+                <div class="card-block">
+                  <h2 class="card-title"><a href="single.html">今天是个好日子啊！</a></h2>
+                  <p class="card-meta">
+                    <span class="card-author"><a href="author.html">mxy</a></span> · 2017年10月11日
+                  </p>
+                  <a href="single.html" class="img-box" title="日本近忧">
+                    <img src="assets/img/765x315/765x315-1.jpg" class="card-img-top" alt="插画 ｜晁春彬">
+                  </a>
+                  <p class="card-excerpt mt-3">这是一段简介，今天玩狼人杀真的感觉挺好。这是一段简介，今天玩狼人杀真的感觉挺好。这是一段简介，今天玩狼人杀真的感觉挺好。</p>
+                </div>
+                <div class="card-footer">
+                  <span class="read-more"><a href="single.html">阅读全文</a></span>
+                </div>
+              </div><!--./card-->
 
-      <div class="col-8">
-        <div class="card post">
-          <div class="card-block">
-            <h2 class="card-title"><a href="single.html">今天是个好日子啊！</a></h2>
-            <p class="card-meta">
-              <span class="card-author"><a href="author.html">mxy</a></span> · 2017年10月11日
-            </p>
-            <a href="single.html" class="img-box" title="日本近忧">
-              <img src="assets/img/765x315/765x315-1.jpg" class="card-img-top" alt="插画 ｜晁春彬">
-            </a>
-            <p class="card-excerpt mt-3">这是一段简介，今天玩狼人杀真的感觉挺好。这是一段简介，今天玩狼人杀真的感觉挺好。这是一段简介，今天玩狼人杀真的感觉挺好。</p>
-          </div>
-          <div class="card-footer">
-            <span class="read-more"><a href="single.html">阅读全文</a></span>
-          </div>
-        </div><!--./card-->
+              <div class="card">
+                <div class="card-block">
+                  <h2 class="card-title"><a href="single.html">今天是个好日子啊！</a></h2>
+                  <p class="card-meta">
+                    <span class="card-author"><a href="author.html">mxy</a></span> · 2017年10月11日
+                  </p>
+                  <p class="card-excerpt mt-3">这是一段简介，今天玩狼人杀真的感觉挺好。这是一段简介，今天玩狼人杀真的感觉挺好。这是一段简介，今天玩狼人杀真的感觉挺好。</p>
+                </div>
+                <div class="card-footer">
+                  <span class="card-author">mxy</span>
+                  <span class="read-more">阅读全文</span>
+                </div>
+              </div><!--./card-->
 
-        <div class="card post">
-          <div class="card-block">
-            <h2 class="card-title"><a href="single.html">今天是个好日子啊！</a></h2>
-            <p class="card-meta">
-              <span class="card-author"><a href="author.html">mxy</a></span> · 2017年10月11日
-            </p>
-            <p class="card-excerpt mt-3">这是一段简介，今天玩狼人杀真的感觉挺好。这是一段简介，今天玩狼人杀真的感觉挺好。这是一段简介，今天玩狼人杀真的感觉挺好。</p>
-          </div>
-          <div class="card-footer">
-            <span class="card-author">mxy</span>
-            <span class="read-more">阅读全文</span>
-          </div>
-        </div><!--./card-->
+              <div class="card">
+                <div class="card-block">
+                  <div class="row">
+                    <div class="col-4">
+                      <a class="img-box" href="single.html" title="日本近忧">
+                        <img src="assets/img/com/com4.jpg" class="card-img" alt="插画 ｜晁春彬">
+                      </a>
+                    </div>
+                    <div class="col-8">
+                      <h2 class="card-title"><a href="single.html">今天是个好日子啊！</a></h2>
+                      <p class="card-meta">
+                        <span class="card-author"><a href="author.html">mxy</a></span> · 2017年10月11日
+                      </p>
+                      <p class="card-excerpt mt-3">这是一段简介，今天玩狼人杀真的感觉挺好。这是一段简介，今天玩狼人杀真的感觉挺好。这是一段简介，今天玩狼人杀真的感觉挺好。</p>
+                    </div>
+                  </div>
+                </div>
+              </div><!--./card-->
 
-        <div class="card post">
-          <div class="card-block">
-            <div class="row">
-              <div class="col-4">
-                <a class="img-box" href="single.html" title="日本近忧">
-                  <img src="assets/img/com/com4.jpg" class="card-img" alt="插画 ｜晁春彬">
+              <div class="card card-inverse">
+                <a href="single.html" class="img-box" title="日本近忧">
+                  <img src="assets/img/765x315/765x315-3.jpg" class="card-img-top" alt="插画 ｜晁春彬">
                 </a>
-              </div>
-              <div class="col-8">
-                <h2 class="card-title"><a href="single.html">今天是个好日子啊！</a></h2>
-                <p class="card-meta">
-                  <span class="card-author"><a href="author.html">mxy</a></span> · 2017年10月11日
-                </p>
-                <p class="card-excerpt mt-3">这是一段简介，今天玩狼人杀真的感觉挺好。这是一段简介，今天玩狼人杀真的感觉挺好。这是一段简介，今天玩狼人杀真的感觉挺好。</p>
+                <div class="card-img-overlay-bottom">
+                  <h2 class="card-title"><a href="single.html">今天是个好日子啊！</a></h2>
+                  <p class="card-text card-meta">
+                    <span class="card-author"><a href="author.html">mxy</a></span> · 2017年10月11日
+                  </p>
+                </div>
+              </div><!--./card-->
+
+              <div class="card p-3">
+                <blockquote class="card-block card-blockquote">
+                  <p>如果你看不惯我，请不要试图说服我活成你的样子可以吗，我们学会彼此欣赏好不好，每个人都该活出属于自己的样子。</p>
+                  <footer>
+                    <small class="text-muted">
+                      Someone famous in <cite title="Source Title">Source Title</cite>
+                    </small>
+                  </footer>
+                </blockquote>
               </div>
             </div>
           </div>
-        </div><!--./card-->
-
-        <div class="card card-inverse post">
-          <a href="single.html" class="img-box" title="日本近忧">
-            <img src="assets/img/765x315/765x315-3.jpg" class="card-img-top" alt="插画 ｜晁春彬">
-          </a>
-          <div class="card-img-overlay-bottom">
-            <h2 class="card-title"><a href="single.html">今天是个好日子啊！</a></h2>
-            <p class="card-text card-meta">
-              <span class="card-author"><a href="author.html">mxy</a></span> · 2017年10月11日
-            </p>
-          </div>
-        </div><!--./card-->
-
-        <div class="card p-3">
-          <blockquote class="card-block card-blockquote">
-            <p>如果你看不惯我，请不要试图说服我活成你的样子可以吗，我们学会彼此欣赏好不好，每个人都该活出属于自己的样子。</p>
-            <footer>
-              <small class="text-muted">
-                Someone famous in <cite title="Source Title">Source Title</cite>
-              </small>
-            </footer>
-          </blockquote>
         </div>
 
+        <div class="col-lg-4">
+          <div class="sidebar">
+            <div class="card">
+              <h3 class="card-header">编辑推荐</h3>
+              <div class="card-block">
+                <ul class="list-unstyled">
+                  <li><a href="single.html" rel="bookmark">日本公司缺远虑，中国公司缺近忧缺近忧缺近忧缺近忧缺近忧缺近忧</a></li>
+                  <li><a href="single.html" rel="bookmark">天润融通入选最具活力云计算服务商</a></li>
+                  <li><a href="single.html" rel="bookmark">浅谈博客该如何定位该如何定位该如何定位该如何定位</a></li>
+                  <li><a href="single.html" rel="bookmark">天润融通入选最具活力云计算服务商</a></li>
+                  <li><a href="single.html" rel="bookmark">这是一篇置顶文章</a></li>
+                </ul>
+              </div>
+            </div>
+          </div>
+        </div>
 
       </div>
 
     </div>
-
   </div>
-</div>
 
 
   <!-- 复用的底部 -->
