--- a/category6.html
+++ b/category6.html
@@ -12,7 +12,7 @@
   <link rel="stylesheet" href="assets/css/font-awesome.min.css">
 </head>
 <body>
-  <nav class="navbar navbar-expand-md navbar-light">
+  <nav class="navbar navbar-expand-md navbar-light bg-white fixed-top">
     <button class="navbar-toggler navbar-toggler-right" type="button" data-toggle="collapse" data-target="#navbarNavDropdown" aria-controls="navbarNavDropdown" aria-expanded="false" aria-label="Toggle navigation">
       <span class="navbar-toggler-icon"></span>
     </button>
@@ -51,10 +51,9 @@
     </div>
   </nav>
   <!-- page-header start-->
-  <div class="jumbotron page-header">
+  <div class="jumbotron page-header rounded-0 bg-info text-white">
     <div class="container">
       <h1>相册</h1>
-      <hr>
       <p>如果这是世界上最美的照片，我不信。</p>
     </div>
   </div>
@@ -76,7 +75,7 @@
                   <a href="single.html" class="img-box" title="日本近忧">
                     <img src="assets/img/765x315/765x315-1.jpg" class="card-img-top" alt="插画 ｜晁春彬">
                   </a>
-                  <p class="card-excerpt mt-3">这是一段简介，今天玩狼人杀真的感觉挺好。这是一段简介，今天玩狼人杀真的感觉挺好。这是一段简介，今天玩狼人杀真的感觉挺好。</p>
+                  <p class="card-excerpt">这是一段简介，今天玩狼人杀真的感觉挺好。这是一段简介，今天玩狼人杀真的感觉挺好。这是一段简介，今天玩狼人杀真的感觉挺好。</p>
                 </div>
                 <div class="card-footer">
                   <span class="read-more"><a href="single.html">阅读全文</a></span>
@@ -90,9 +89,9 @@
                     <span class="card-author"><a href="author.html">mxy</a></span> · 2017年10月11日
                   </p>
                   <p class="card-excerpt mt-3">这是一段简介，今天玩狼人杀真的感觉挺好。这是一段简介，今天玩狼人杀真的感觉挺好。这是一段简介，今天玩狼人杀真的感觉挺好。</p>
+
                 </div>
                 <div class="card-footer">
-                  <span class="card-author">mxy</span>
                   <span class="read-more">阅读全文</span>
                 </div>
               </div><!--./card-->
@@ -110,34 +109,52 @@
                       <p class="card-meta">
                         <span class="card-author"><a href="author.html">mxy</a></span> · 2017年10月11日
                       </p>
-                      <p class="card-excerpt mt-3">这是一段简介，今天玩狼人杀真的感觉挺好。这是一段简介，今天玩狼人杀真的感觉挺好。这是一段简介，今天玩狼人杀真的感觉挺好。</p>
+                      <p class="card-excerpt">这是一段简介，今天玩狼人杀真的感觉挺好。这是一段简介，今天玩狼人杀真的感觉挺好。这是一段简介，今天玩狼人杀真的感觉挺好。</p>
+                      <p class="card-meta">
+                        <span class="read-more">阅读全文</span>
+                      </p>
                     </div>
                   </div>
                 </div>
               </div><!--./card-->
 
-              <div class="card card-inverse">
-                <a href="single.html" class="img-box" title="日本近忧">
-                  <img src="assets/img/765x315/765x315-3.jpg" class="card-img-top" alt="插画 ｜晁春彬">
-                </a>
-                <div class="card-img-overlay-bottom">
-                  <h2 class="card-title"><a href="single.html">今天是个好日子啊！</a></h2>
-                  <p class="card-text card-meta">
-                    <span class="card-author"><a href="author.html">mxy</a></span> · 2017年10月11日
-                  </p>
-                </div>
-              </div><!--./card-->
-
-              <div class="card p-3">
-                <blockquote class="card-block card-blockquote">
-                  <p>如果你看不惯我，请不要试图说服我活成你的样子可以吗，我们学会彼此欣赏好不好，每个人都该活出属于自己的样子。</p>
-                  <footer>
-                    <small class="text-muted">
-                      Someone famous in <cite title="Source Title">Source Title</cite>
-                    </small>
-                  </footer>
-                </blockquote>
+              <div class="card card-block">
+                <div class="card card-inverse mb-0">
+                  <a href="single.html" class="img-box" title="日本近忧">
+                    <img src="assets/img/765x315/765x315-3.jpg" class="card-img" alt="插画 ｜晁春彬">
+                  </a>
+                  <div class="card-img-overlay-bottom">
+                    <h2 class="card-title"><a href="single.html">今天是个好日子啊！</a></h2>
+                    <p class="card-meta">
+                      <span class="card-author"><a href="author.html">mxy</a></span> · 2017年10月11日
+                    </p>
+                  </div>
+                </div><!--./card-->
               </div>
+
+              <div class="card">
+                <div class="card-block">
+                    <blockquote class="card-blockquote">
+                      <p>如果你看不惯我，请不要试图说服我活成你的样子可以吗，我们学会彼此欣赏好不好，每个人都该活出属于自己的样子。</p>
+                      <footer>
+                        <small class="text-muted">
+                          出自 <cite title="Source Title">亮点</cite>
+                        </small>
+                      </footer>
+                    </blockquote>
+                </div>
+              </div>
+
+              <div class="card">
+                <div class="card-block">
+                  <p class="card-text">如果你看不惯我，请不要试图说服我活成你的样子可以吗，我们学会彼此欣赏好不好，每个人都该活出属于自己的样子。</p>
+                </div>
+                <div class="card-footer">
+                  <span class="card-author"><a href="author.html">mxy</a></span> · 2017年10月11日 16:34:56
+                </div>
+              </div>
+
+
             </div>
           </div>
         </div>
