--- a/index.html
+++ b/index.html
@@ -12,46 +12,45 @@
   <link rel="stylesheet" href="assets/css/index.css">
 </head>
 <body class="home front-page">
-  <nav class="navbar navbar-expand-md navbar-light">
-    <button class="navbar-toggler navbar-toggler-right" type="button" data-toggle="collapse" data-target="#navbarNavDropdown" aria-controls="navbarNavDropdown" aria-expanded="false" aria-label="Toggle navigation">
-      <span class="navbar-toggler-icon"></span>
-    </button>
-    <div class="container">
-      <a class="navbar-brand" href="index.html">轻主题</a>
-      <div class="collapse navbar-collapse" id="navbarNavDropdown">
-        <ul class="navbar-nav mr-auto">
-          <li class="nav-item dropdown active">
-            <a class="nav-link dropdown-toggle" data-toggle="dropdown" aria-haspopup="true" aria-expanded="false">首页 <span class="sr-only">(current)</span></a>
-            <ul class="dropdown-menu" role="menu">
-              <li class="nav-item"><a class="nav-link" href="index-2.html">首页 2</a></li>
-              <li class="nav-item"><a class="nav-link" href="index-3.html">首页 3</a></li>
-              <li class="nav-item"><a class="nav-link" href="index-4.html">首页 4</a></li>
-              <li class="nav-item"><a class="nav-link" href="index-5.html">首页 5</a></li>
-              <li class="nav-item"><a class="nav-link" href="index-6.html">首页 6</a></li>
-            </ul>
-          </li>
-          <li class="nav-item dropdown">
-            <a class="nav-link dropdown-toggle" data-toggle="dropdown" aria-haspopup="true" aria-expanded="false">分类列表</a>
-            <ul class="dropdown-menu" role="menu">
-              <li class="nav-item"><a class="nav-link" href="category6.html">混合列表</a></li>
-              <li class="nav-item"><a class="nav-link" href="category.html">文章列表-中图</a></li>
-              <li class="nav-item"><a class="nav-link" href="category4.html">文章列表-大图</a></li>
-              <li class="nav-item"><a class="nav-link" href="category3.html">文章列表-Masonry布局</a></li>
-              <li class="nav-item"><a class="nav-link" href="category2.html">相册-Masonry1</a></li>
-              <li class="nav-item"><a class="nav-link" href="category5.html">相册-Masonry2</a></li>
-            </ul>
-          </li>
-          <li class="nav-item"><a class="nav-link" href="single.html">文章</a></li>
-        </ul>
-        <form class="form-inline my-2 my-lg-0 mr-auto">
-          <input class="form-control mr-sm-2" type="text" placeholder="输入关键字">
-          <button class="btn btn-outline-secondary my-2 my-sm-0" type="submit">搜索</button>
-        </form>
-        <a href="#" class="btn btn-warning navbar-btn mr-2">登陆</a>
-        <a class="btn btn-secondary navar-btn" href="register.html">注册</a>
+  <header>
+    <nav class="navbar navbar-expand-lg navbar-light bg-light fixed-top">
+      <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarNavDropdown" aria-controls="navbarNavDropdown" aria-expanded="false" aria-label="Toggle navigation">
+        <span class="navbar-toggler-icon"></span>
+      </button>
+      <div class="container">
+        <a class="navbar-brand" href="index.html">LeanTheme</a>
+        <div class="collapse navbar-collapse" id="navbarNavDropdown">
+          <ul class="navbar-nav mr-auto">
+            <li class="nav-item dropdown active">
+              <a class="nav-link dropdown-toggle" data-toggle="dropdown" aria-haspopup="true" aria-expanded="false">首页 <span class="sr-only">(current)</span></a>
+              <ul class="dropdown-menu" role="menu">
+                <li class="nav-item"><a class="nav-link" href="index-2.html">首页 2</a></li>
+                <li class="nav-item"><a class="nav-link" href="index-3.html">首页 3</a></li>
+                <li class="nav-item"><a class="nav-link" href="index-4.html">首页 4</a></li>
+                <li class="nav-item"><a class="nav-link" href="index-5.html">首页 5</a></li>
+                <li class="nav-item"><a class="nav-link" href="index-6.html">首页 6</a></li>
+              </ul>
+            </li>
+            <li class="nav-item dropdown">
+              <a class="nav-link dropdown-toggle" data-toggle="dropdown" aria-haspopup="true" aria-expanded="false">分类列表</a>
+              <ul class="dropdown-menu" role="menu">
+                <li class="nav-item"><a class="nav-link" href="category.html">文章列表-中图</a></li>
+                <li class="nav-item"><a class="nav-link" href="category4.html">文章列表-大图</a></li>
+                <li class="nav-item"><a class="nav-link" href="category3.html">文章列表-Masonry布局</a></li>
+                <li class="nav-item"><a class="nav-link" href="category2.html">相册-Masonry1</a></li>
+                <li class="nav-item"><a class="nav-link" href="category5.html">相册-Masonry2</a></li>
+              </ul>
+            </li>
+            <li class="nav-item"><a class="nav-link" href="single.html">文章</a></li>
+          </ul>
+          <form class="form-inline">
+            <input class="form-control mr-sm-2" type="text" placeholder="Search" aria-label="Search">
+            <button class="btn btn-outline-success my-2 my-sm-0" type="submit">Search</button>
+          </form>
+        </div>
       </div>
-    </div>
-  </nav>
+    </nav>
+  </header>
 
     <!-- 上面是复用的头部 -->
 
